lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:2: error: not found: type Segment
  def getLandingZone():Segment = {
                       ^Lander:15: error: not found: value Segment
	return Segment(test1,test2)
               ^Lander:17: error: not found: value Segment
return Segment(Point(0,0),Point(1999,0))
       ^Lander:23: error: not found: value zone
	if (getX() <= zone(0).x) {return 0}
                      ^Lander:25: error: not found: value zone
		if (getX()>=zone(1).x) {return 2}
                            ^Lander:25: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:43: error: not found: value setPousseeDesire
  		setPousseeDesire(4)
                ^